# Project_Greenlight

./: .augment-guidelines  .augment-task-instructions.md  .env.example  .gitignore  DEPRECATION_PLAN.md  NOTATION_STANDARDS.md  START_HERE.md  create_shortcut.ps1  launch_greenlight.bat  launch_greenlight.ps1  pyproject.toml  requirements.txt  run_reference_gen.py  start_ui.bat  symbolic_notation_chronology.md  test_backdoor.py  test_e2e_tools.py  test_id_system.py  test_reference_prompts.py  test_rich_character_flow.py  test_ui_diagnostic.py  ui_diagnostic_report.json  world_building_expansion.md
.archive/deprecated/: Agent_Prompts  README.md
.claude/: settings.local.json
.proof_of_concept/: proof_of_concept_data.json  proof_of_concept_report.md  rag_computation_data.json  rag_computation_report.md  symbolic_os_feasibility_data.json  symbolic_os_feasibility_report.md
.proof_of_concept/memory/: memory.jsonl
.proof_of_concept/notation_lib/: notation_library.json
.runtime_demo/: runtime_state.json
Agnostic_Core_OS/: .augment-guidelines  __init__.py
Agnostic_Core_OS/core/: __init__.py  context_logger.py  core_lock.py  file_ops.py  platform.py  process_runner.py  vector_auth.py
Agnostic_Core_OS/core_routing/: __init__.py  error_handoff.py  health_logger.py  vector_cache.py
Agnostic_Core_OS/demo/: __init__.py  runtime_demo.py
Agnostic_Core_OS/engines/: __init__.py  audio_engine.py  comparison_learning.py  image_engine.py  live_analyze_engine.py
Agnostic_Core_OS/memory/: __init__.py  dataset_crafter.py  ui_network.py  user_profile.py  vector_memory.py
Agnostic_Core_OS/omni_mind/: __init__.py  context_engine.py  decision_engine.py  memory.py  omni_mind.py  self_heal.py  suggestion_engine.py
Agnostic_Core_OS/procedural/: __init__.py  context_index.py  file_browser.py  notation_library.py
Agnostic_Core_OS/protocols/: __init__.py  assistant_bridge.py  llm_handshake.py
Agnostic_Core_OS/runtime/: __init__.py  app_registry.py  daemon.py  event_bus.py  health_monitor.py  sdk.py
Agnostic_Core_OS/tests/: __init__.py  proof_of_concept_rag_computation.py  proof_of_concept_symbolic_os_feasibility.py  proof_of_concept_symbolic_vectoring.py  test_engines.py  test_memory_system.py  test_procedural.py  test_vector_llm_handshake.py
Agnostic_Core_OS/translators/: __init__.py  systems_translator.py  vector_language.py
Agnostic_Core_OS/validators/: __init__.py  iteration_validator.py
Diagrams/: 01_SYSTEM_OVERVIEW.md  02_PIPELINE_FLOW.md  03_FILE_DIRECTORY_MAP.md  03_FILE_DIRECTORY_MAP_PART2.md  04_AGENTS_REFERENCE.md  05_LLM_LAYER.md  06_CONTEXT_ENGINE.md  07_OMNIMIND_SYSTEM.md  08_WEB_UI_COMPONENTS.md  09_REFERENCE_GENERATION.md  10_AGNOSTIC_CORE_OS.md  11_QUALITY_PATTERNS.md  12_PROJECT_FILES.md  13_QUICK_REFERENCE_CARD.md  README.md
backend/: __init__.py  main.py
backend/api/: __init__.py  auth.py  deps.py  health.py  projects.py  writer.py
backend/core/: __init__.py  config.py  logging.py  supabase.py
backend/models/: __init__.py  auth.py  project.py  writer.py
config/: camera_shot_library.json  greenlight_config.json
docs/: ARCHITECTURE_DOCUMENTATION.md  WORLD_CONFIG_REVAMP_DESIGN.md
docs/plans/: UI_Pipeline_Improvements_Discussion.md
frontend/: next.config.ts  package.json
greenlight/: __init__.py  __main__.py  runtime_integration.py
greenlight/agents/: COLLABORATION_USAGE.md  __init__.py  agent_pool.py  agent_retrieval.py  assembly_agents.py  base_agent.py  batch_coherency_agent.py  beat_extractor.py  brainstorm_agents.py  collaboration.py  dialogue_consensus.py  frame_evaluation_agent.py  orchestrator.py  profile_template_agent.py  prompt_refinement_agent.py  prompts.py  prose_agent.py  reference_prompt_agent.py  scene_outline_agent.py  shot_list_validator.py  specialized_agents.py  steal_list_judge.py  task_translator.py
greenlight/api/: __init__.py  main.py
greenlight/config/: __init__.py  api_dictionary.py  notation_patterns.py  word_caps.py
greenlight/context/: __init__.py  agent_context_delivery.py  character_temporal_context.py  context_assembler.py  context_compiler.py  context_engine.py  context_manager.py  context_validator.py  director_context_compiler.py  keyword_index.py  scene_summarizer.py  thread_tracker.py  vector_store.py
greenlight/core/: __init__.py  checkpoint_manager.py  config.py  constants.py  env_loader.py  exceptions.py  id_system.py  image_handler.py  logging_config.py  pitch_analyzer.py  project_context.py  prompt_loader.py  reference_labeler.py  retry.py  startup.py  storyboard_labeler.py  style_utils.py  thumbnail_manager.py
greenlight/director/: __init__.py
greenlight/graph/: __init__.py  dependency_graph.py  propagation_engine.py  regeneration_queue.py
greenlight/llm/: __init__.py  api_clients.py  client_pool.py  complexity_router.py  function_router.py  llm_config.py  llm_registry.py  (+1 more)
tests/: __init__.py  conftest.py  test_autonomous_agent.py  test_blocked_content_fallback.py  test_image_handler.py  test_runtime_integration.py
web/: package-lock.json  package.json
(+379 files in other folders)
