[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morpheus-writ"
version = "1.0.0"
description = "AI-Powered Story Writing Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Morpheus Writ Team"}
]
keywords = ["ai", "story", "writing", "narrative", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
morpheus = "morpheus.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["morpheus*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

